<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sougaku"
            android:textColor="#624a5d"
            android:textSize="14sp" >
        </TextView>

        <LinearLayout
            android:id="@+id/linearLayout1_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="right" >

            <TextView
                android:id="@+id/edt_kinngaku"
                android:layout_width="150dp"
                android:layout_height="21dp"
                android:gravity="right"
                android:text="@string/num0"
                android:textColor="#fb6899"
                android:textSize="21sp" >
            </TextView>

            <TextView
                android:id="@+id/txt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/money"
                android:textColor="#624a5d"
                android:textSize="14sp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/ninnzuu"
            android:textColor="#624a5d"
            android:textSize="14sp" >
        </TextView>

        <LinearLayout
            android:id="@+id/linearLayout2_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="right" >

            <TextView
                android:id="@+id/edt_ninnzuu"
                android:layout_width="150dp"
                android:layout_height="21dp"
                android:gravity="right"
                android:text="@string/num0"
                android:textColor="#fb6899"
                android:textSize="21sp" >
            </TextView>

            <TextView
                android:id="@+id/txt_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/nin"
                android:textColor="#624a5d"
                android:textSize="14sp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/kinngaku_high"
            android:textColor="#624a5d"
            android:textSize="14sp" >
        </TextView>

        <LinearLayout
            android:id="@+id/linearLayout3_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="right" >

            <TextView
                android:id="@+id/edt_ooku_hito"
                android:layout_width="150dp"
                android:layout_height="21dp"
                android:gravity="right"
                android:text="@string/num0"
                android:textColor="#fb6899"
                android:textSize="21sp" >
            </TextView>

            <TextView
                android:id="@+id/txt_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/nin"
                android:textColor="#624a5d"
                android:textSize="14sp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ooku_kinngaku"
            android:textColor="#624a5d"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/linearLayout4_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="right" >

            <TextView
                android:id="@+id/edt_ookukinngaku"
                android:layout_width="150dp"
                android:layout_height="21dp"
                android:gravity="right"
                android:text="@string/num0"
                android:textColor="#fb6899"
                android:textSize="21sp" >
            </TextView>

            <TextView
                android:id="@+id/txt_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/money"
                android:textColor="#624a5d"
                android:textSize="14sp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_result1"
        android:layout_width="fill_parent"
        android:layout_height="21dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/txt_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/kinngaku_low"
            android:textColor="#333333"
            android:textSize="14sp" >
        </TextView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/edt_result1"
                android:layout_width="140dp"
                android:layout_height="21dp"
                android:gravity="right"
                android:text="@string/num0"
                android:textColor="#333333"
                android:textSize="21sp" >
            </TextView>

            <TextView
                android:id="@+id/txt_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:text="@string/money"
                android:textColor="#333333"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_result2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/kinngaku_high"
            android:textColor="#333333"
            android:textSize="14sp" >
        </TextView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <TextView
                android:id="@+id/edt_result2"
                android:layout_width="140dp"
                android:layout_height="21dp"
                android:gravity="right"
                android:text="@string/num0"
                android:textColor="#333333"
                android:textSize="21sp" >
            </TextView>

            <TextView
                android:id="@+id/txt_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:text="@string/money"
                android:textColor="#333333"
                android:textSize="14sp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kinngaku_total"
            android:textColor="#54411f"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlyout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="3dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edt_result3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="right"
            android:text="@string/num0"
            android:textColor="#54411f"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/money"
            android:textColor="#54411f"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oturi"
            android:textColor="#54411f"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlyout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="3dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edt_result4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="right"
            android:text="@string/num0"
            android:textColor="#54411f"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/money"
            android:textColor="#54411f"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlyout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:layout_marginTop="-15dp"
        android:gravity="right"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>