<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/linearlayout_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sougaku"
            android:textColor="#624a5d"
            android:textSize="14sp" >
        </TextView>

        <LinearLayout
            android:id="@+id/linearLayout1_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="right" >

            <TextView
                android:id="@+id/edt_genne"
                android:layout_width="150dp"
                android:layout_height="21dp"
                android:gravity="right"
                android:text="@string/num0"
                android:textColor="#fb6899"
                android:textSize="21sp" >
            </TextView>

            <TextView
                android:id="@+id/txt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/money"
                android:textColor="#624a5d"
                android:textSize="14sp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_3"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:text="@string/waribikiritu"
            android:textColor="#624a5d"
            android:textSize="14sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="58dp"
        android:orientation="horizontal" >

        <FrameLayout
            android:id="@+id/fl_seek"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/ly_btnMin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp" >

                    <jp.neoscorp.android.love_mizumoriado.calculator_s_m_00004_01.ado_calculator01.customize.RepeatingImageButton
                        android:id="@+id/btn_min"
                        style="@style/btn_style_slider_left"
                        android:layout_width="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ly_btnMax"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp" >

                    <jp.neoscorp.android.love_mizumoriado.calculator_s_m_00004_01.ado_calculator01.customize.RepeatingImageButton
                        android:id="@+id/btn_max"
                        style="@style/btn_style_slider_right" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" 
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <SeekBar
                        android:id="@+id/seekBar1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dip"
                        android:layout_marginRight="0dip"
                        android:layout_marginTop="0dip"
                        android:maxHeight="50dp"
                        android:maxWidth="60dp"
                        android:minHeight="50dp"
                        android:minWidth="60dp"
                        android:paddingBottom="0dp"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:progress="50"
                        android:progressDrawable="@drawable/seekbar_style1"
                        android:thumb="@drawable/thumb_854"
                        android:thumbOffset="15dp"
                        android:visibility="gone" />

                    <SeekBar
                        android:id="@+id/seekBar2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dip"
                        android:layout_marginRight="0dip"
                        android:layout_marginTop="0dip"
                        android:maxHeight="50dp"
                        android:maxWidth="60dp"
                        android:minHeight="50dp"
                        android:minWidth="60dp"
                        android:paddingBottom="0dp"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:progress="50"
                        android:progressDrawable="@drawable/seekbar_style2"
                        android:thumb="@drawable/thumb_960"
                        android:thumbOffset="15dp"
                        android:visibility="gone" />

                    <SeekBar
                        android:id="@+id/seekBar3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dip"
                        android:layout_marginRight="0dip"
                        android:layout_marginTop="0dip"
                        android:maxHeight="70dp"
                        android:maxWidth="60dp"
                        android:minHeight="45dp"
                        android:minWidth="60dp"
                        android:paddingBottom="0dp"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:progress="50"
                        android:progressDrawable="@drawable/seekbar_style2"
                        android:thumb="@drawable/thumb_960"
                        android:thumbOffset="15dp"
                        android:visibility="gone" />
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="43dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/waribikiato"
            android:textColor="#333333"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_result02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edt_result02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="right"
            android:text="@string/num0"
            android:textColor="#333333"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/money"
            android:textColor="#333333"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waribigaku"
            android:textColor="#333333"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_result01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="120dp"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edt_result01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="right"
            android:text="@string/num0"
            android:textColor="#333333"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/money"
            android:textColor="#333333"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlyout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:layout_marginTop="-17dp"
        android:gravity="right"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>